fixed 100vw bug on mobile

--- a/src/components/homepage/About.module.css
+++ b/src/components/homepage/About.module.css
@@ -26,8 +26,7 @@
 }
 
 .flexContainer {
-    /* height:100vh; */
-    max-height: 100%;
+    height:100vh;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -36,4 +35,10 @@
 
 .image {
     height: 400px;
+}
+
+@media only screen and (max-width: 480px) {
+    .flexContainer {
+        height:100%;
+    }
 }
