--- a/src/components/homepage/Header.module.css
+++ b/src/components/homepage/Header.module.css
@@ -47,3 +47,9 @@
     border-radius: 50px;
     box-shadow: 10px 10px 5px #000;
 }
+
+@media only screen and (max-width: 480px) {
+    .scroll-button img {
+        width: 4rem;
+    }
+}
